manifest/k8s-onpremise/core/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-dashboard
spec:
  selector:
    app: frontend-dashboard
  ports:
  - port: 80  
    targetPort: 8080
