manifest/k8s-onpremise/core/frontend/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "marketplace.local"
  gateways:
  - frontend-gateway
  http:
    - name: "dashboard"
      route:
      - destination:
          host: frontend-dashboard.svc.cluster.local
          port:
            number: 8080
